language "About" update

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -26,7 +26,46 @@
   "cause3": "Long-term relationship:",
   "causetext3": "HomeBrilliant doesn't just sell homes; we build long-term partnerships based on mutual understanding and trust. We believe that our clients deserve not only high-quality housing, but also a unique communication environment. After the agreement is concluded, we do not stop our care - we become your reliable partners, ensuring comfort and well-being with our services throughout the life of your new home. Welcome to the HomeBrilliant community, where every customer is part of our family.",
   "box4-one": "HomeBrilliant is the leader among the competition, and here's why. Our company is defined not only as a seller of housing, but also as a creator of individual and elite living spaces. We are ahead of the competition thanks to unique offers that combine luxury, technological innovation and exquisite design. Our properties are true masterpieces in which every element is imbued with style and functionality.",
-  "box4-two": "Our team of professionals exceeds expectations, thanks to a high level of expertise and a personal approach to each client. We offer not only sales, but also consultation, support and individual solutions for each buyer. HomeBrilliant is not just a company, it is a lifestyle and a partnership that provides you with not only a beautiful home, but also a sense of privilege and unparalleled quality. Choose us, choose an exceptional future, where every day is a new opportunity to enjoy life in luxury and comfort."
+  "box4-two": "Our team of professionals exceeds expectations, thanks to a high level of expertise and a personal approach to each client. We offer not only sales, but also consultation, support and individual solutions for each buyer. HomeBrilliant is not just a company, it is a lifestyle and a partnership that provides you with not only a beautiful home, but also a sense of privilege and unparalleled quality. Choose us, choose an exceptional future, where every day is a new opportunity to enjoy life in luxury and comfort.",
+
+
+
+  "about-b": "About HomeBrilliant:",
+  "aims": "HomeBrilliant aims to provide you with the largest selection of properties marked by refinement, style and personal touch. Thanks to our large catalog of real estate, you will have the opportunity to find the perfect place to live or invest.:",
+  "invest": "To investors",
+  "garant": "HomeBrilliant guarantees:",
+  "unikal": "Unique opportunities:",
+  "dostup": "Access advanced properties for investments that stand out in the market.",
+  "expert": "Expert consultations:",
+  "nashi": "Our real estate experts will provide you with valuable insight and support in making informed decisions.",
+  "pokup": "Buyers:",
+  "shir": "we recommend using HomeBrilliant:",
+  "osob": "A wide selection:",
+  "prodavec": "To sellers:",
+  "efect": "Effective selling:",
+  "prof": "Professional marketing:",
+  "maxi": "We maximize the appeal of your property through advertising and marketing.",
+  "nashspec": "Our specialists will help you sell your real estate quickly and profitably.",
+  "howkore": "How to use HomeBrilliant:",
+  "zavd": "Thanks to the advanced search and filters, you can quickly find objects that meet your needs.",
+  "vivche": "Studying the catalog:",
+  "detal": "Get to know each object in detail with the help of descriptions and photos in our catalog.",
+  "expertni": "Expert consultations:",
+  "nashcomand": "Our team is ready to provide you with an individual approach and consultations.",
+  "team": "Our team of experts is ready to provide you not only with advice, but also with an individual approach to ensure maximum comfort and confidence in your decisions. Our experts analyze your needs and requirements in depth to find a home that fits your lifestyle and budget. We offer you thorough advice and educated market analysis so you can make informed decisions.",
+  "rada": "we recommend using HomeBrilliant:",
+  "vid": "From luxury apartments to cozy houses - we have everything to satisfy your needs.",
+  "vashuni": "Your unique wishes and requirements are our priority. We will help you find exactly what you are looking for",
+  "filter": "Search and filter:",
+  "fahi": "Our specialists are ready to help you at any time",
+  "p1": "Our team is ready to provide you with an exceptional level of service and address your needs. Highly qualified and friendly staff equipped with in-depth knowledge of real estate and ready to provide expert advice. With professionalism and years of experience, they are always ready to provide personalized assistance at every stage of your experience with us.",
+  "dima": "Dmytrenko Alla",
+  "rent": "Apartment rental specialist",
+  "sheva": "Shevchenko Valery",
+  "zahar": "Zakharchuk Nina",
+  "sales": "Apartment sales specialist",
+  "sereda": "Sereda Timofey",
+  "p2": "And we understand the uniqueness of each client and approach each situation individually. Our team offers you not only effective support, but also open, friendly communication. We welcome your questions and are always ready to help you solve any issues. Let our employees become your loyal partners in all real estate matters, guaranteeing a quick and efficient response to all your needs."
 
 
 
