--- a/src/assets/i18n/ua.json
+++ b/src/assets/i18n/ua.json
@@ -25,7 +25,45 @@
   "cause3": "Довгострокові відносини:",
   "causetext3": "HomeBrilliant не просто продає житло; ми будуємо довгострокові партнерства, що базуються на взаєморозумінні та довірі. Ми віримо, що наші клієнти заслуговують на не тільки високоякісне житло, але й унікальне комунікативне середовище. Після завершення угоди ми не припиняємо нашу турботу - ми стаємо вашими надійними партнерами, забезпечуючи комфорт та благополуччя нашими послугами впродовж усього тривання вашого нового дому. Ласкаво просимо в спільноту HomeBrilliant, де кожен клієнт - це частина нашої родини.",
   "box4-one": "HomeBrilliant - лідер серед конкурентів, і ось чому. Наша компанія визначається не лише як продавець житла, але і як творець індивідуальних та елітних житлових просторів. Ми випереджаємо конкуренцію завдяки унікальним пропозиціям, які об'єднують в собі розкіш, технологічну інноваційність та вишуканий дизайн. Наші об'єкти нерухомості є справжніми шедеврами, в яких кожен елемент пропитаний стилем та функціональністю.",
-  "box4-two": "Наша команда професіоналів перевершує очікування, завдяки високому рівню експертизи та особистому підходу до кожного клієнта. Ми пропонуємо не лише продаж, але й консультації, підтримку та індивідуальні рішення для кожного покупця. HomeBrilliant - це не просто компанія, це стиль життя та партнерство, яке забезпечує вам не тільки прекрасне житло, але й відчуття привілеїв та неперевершеної якості. Обирайте нас, обирайте виняткове майбутнє, де кожен день - це нова можливість насолоджуватися життям в розкіші та комфорті."
+  "box4-two": "Наша команда професіоналів перевершує очікування, завдяки високому рівню експертизи та особистому підходу до кожного клієнта. Ми пропонуємо не лише продаж, але й консультації, підтримку та індивідуальні рішення для кожного покупця. HomeBrilliant - це не просто компанія, це стиль життя та партнерство, яке забезпечує вам не тільки прекрасне житло, але й відчуття привілеїв та неперевершеної якості. Обирайте нас, обирайте виняткове майбутнє, де кожен день - це нова можливість насолоджуватися життям в розкіші та комфорті.",
+
+
+  "about-b": "Про HomeBrilliant:",
+  "aims": "HomeBrilliant ставить за мету надати вам найбільший вибір нерухомості, що відзначається вишуканістю, стилем та персональним підходом. Завдяки нашому великому каталозі об'єктів нерухомості, ви матимете можливість знайти ідеальне місце для життя чи інвестування.",
+  "invest": "Інвесторам:",
+  "garant": "HomeBrilliant гарантує:",
+  "unikal": "Унікальні можливості:",
+  "dostup": "Вступайте до передових об'єктів для інвестицій, що вигідно вирізняються на ринку.",
+  "expert": "Експертні консультації:",
+  "nashi": "Наші експерти з нерухомості нададуть вам цінний інсайт та підтримку у прийнятті обдуманих рішень.",
+  "pokup": "Покупців:",
+  "shir": "Широким вибором:",
+  "osob": "Особиста інформація:",
+  "prodavec": "Продавцям:",
+  "efect": "Ефективний продаж:",
+  "prof": "Професійний маркетинг:",
+  "maxi": "Ми максимізуємо привабливість вашої нерухомості через рекламу та маркетинг.",
+  "nashspec": "Наші спеціалісти допоможуть вам швидко та вигідно реалізувати вашу нерухомість.",
+  "howkore": "Як користуватися HomeBrilliant:",
+  "zavd": "Завдяки розширеному пошуку та фільтрам ви зможете швидко знайти об'єкти, які відповідають вашим потребам",
+  "vivche": "Вивчення каталогу",
+  "detal": "Детально ознайомтеся з кожним об'єктом за допомогою описів та фотографій у нашому каталозі.",
+  "expertni": " Експертні консультації:",
+  "nashcomand": " Наша команда готова надати вам індивідуальний підхід та консультації.",
+  "team": "Наша команда експертів готова надати вам не тільки консультації, але й індивідуальний підхід, щоб забезпечити максимальний комфорт та впевненість у ваших рішеннях. Наши експерти глибоко аналізують ваші потреби та вимоги, щоб знайти житло, яке відповідає вашому стилю життя та бюджету. Ми пропонуємо вам ретельні поради та вивчені аналізи ринку, щоб ви могли приймати обдумані рішення.",
+  "vashuni": "Ваші унікальні бажання і вимоги - наш пріоритет. Ми допоможемо вам знайти саме те, що ви шукаєте.",
+  "filter": "Пошук та фільтрація:",
+  "fahi": "Наші спеціалісти готові допомогти вам у будь-який час.",
+  "p1": "Наша команда готова забезпечити вам винятковий рівень сервісу та відповісти на ваші потреби. Висококваліфікований і дружелюбний персонал, обладнаний глибокими знаннями в галузі нерухомості та готовий надати експертні поради. З професіоналізмом і роками досвіду вони завжди готові надати персоналізовану допомогу на кожному етапі вашої взаємодії з нами.",
+  "dima": "Дмитренко Алла",
+  "rent": "Спеціаліст з оренди квартир",
+  "sheva": "Шевченко Валерій",
+  "zahar": "Захарчук Ніна",
+  "sales": "Спеціаліст з продажу квартир",
+  "sereda": "Середа Тимофій",
+  "rada": "Ми рекомендуємо використовувати HomeBrilliant:",
+  "vid": "Від розкішних квартир до затишних будинків - у нас є все, щоб задовольнити ваші потреби.",
+  "p2": "Ми розуміємо унікальність кожного клієнта і підходимо до кожної ситуації індивідуально. Наша команда пропонує вам не тільки ефективну підтримку, але і відкрите, дружнє спілкування. Ми вітаємо ваші запитання й завжди готові допомогти вам вирішити будь-які питання. Дозвольте нашим співробітникам стати вашими вірними партнерами у всіх питаннях нерухомості, гарантуючи швидку та ефективну відповідь на всі ваші потреби."
 
 
 
