language "FAQ and Privacy" update

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -519,6 +519,75 @@
   "4th floor 248 room",
 
   "158":
-  "Antonovicha 15A"
+  "Antonovicha 15A",
+
+  "loginaut": "Login in to an existing account",
+  "email": "Email",
+  "email_placeholder": "Enter Email",
+  "password": "Password",
+  "password_placeholder": "Enter Password",
+  "logb": "Login",
+  "notacc": "You don't have an account then:",
+  "reg": "Register!",
+
+  "name": "Name",
+  "name_placeholder": "Name",
+  "lastname": "Last Name:",
+  "lastname_placeholder": "",
+  "phone": "Last Name",
+  "number_placeholder": "Number",
+  "gender": "What is your gender?",
+  "gen": "Select your gender:",
+  "male": "Male",
+  "female": "Female",
+  "city": "Which city are you from ?",
+  "selecty": "Select your city:",
+  "acc": "You already have an account then:",
+  "voidi": "Login!",
+
+  "Kiev": "Kiev",
+  "Kharkiv": "Kharkiv",
+  "Odessa": "Odessa",
+  "Dnipro": "Dnipro",
+  "Donetsk": "Donetsk",
+  "Lviv": "Lviv",
+  "Zaporizhzhia": "Zaporizhzhia",
+  "Kryvyi Rih": "Kryvyi Rih",
+  "Sevastopol": "Sevastopol",
+  "Mykolaiv": "Mykolaiv",
+  "Mariupol": "Mariupol",
+  "Luhansk": "Luhansk",
+  "Vinnytsia": "Vinnytsia",
+  "Makiivka": "Makiivka",
+  "Simferopol": "Simferopol",
+  "Chernihiv": "Chernihiv",
+  "Poltava": "Poltava",
+  "Kherson": "Kherson",
+  "Khmelnytskyi": "Khmelnytskyi",
+  "Cherkasy": "Cherkasy",
+  "Chernivtsi": "Chernivtsi",
+  "Zhytomyr": "Zhytomyr",
+  "Sumy": "Sumy",
+  "Rivne": "Rivne",
+  "Horlivka": "Horlivka",
+  "Ivano-Frankivsk": "Ivano-Frankivsk",
+  "Kamenets-Podilskyi": "Kamenets-Podilskyi",
+  "Ternopil": "Ternopil",
+  "Kropyvnytskyi": "Kropyvnytskyi",
+  "Lutsk": "Lutsk",
+  "Kremenchuk": "Kremenchuk",
+  "Bila Tserkva": "Bila Tserkva",
+  "Kerch": "Kerch",
+  "Melitopol": "Melitopol",
+  "Kramatorsk": "Kramatorsk",
+  "Uzhgorod": "Uzhgorod",
+  "Brovary": "Brovary",
+  "Yevpatoria": "Yevpatoria",
+  "Berdiansk": "Berdiansk",
+  "Alchevsk": "Alchevsk",
+  "Nikopol": "Nikopol",
+  "Slovyansk": "Slovyansk",
+  "Pavlohrad": "Pavlohrad",
+  "Perevalsk": "Perevalsk"
 
 }
