--- a/src/assets/i18n/ua.json
+++ b/src/assets/i18n/ua.json
@@ -527,8 +527,73 @@
   "4 поверх 248 каб.",
 
   "158":
-  "Антоновича 15А"
+  "Антоновича 15А",
+  "loginaut": "Увійдіть до існуючого облікового запису",
+  "email": "Електронна пошта",
+  "email_placeholder": "Введіть Email",
+  "password": "Пароль",
+  "password_placeholder": "Введіть пароль",
+  "logb": "Увійти",
+  "notacc": "Якщо у вас немає облікового запису:",
+  "reg": "Зареєструватися!",
 
+  "name": "Ім'я",
+  "name_placeholder": "Ім'я",
+  "lastname": "Прізвище",
+  "lastname_placeholder": "Прізвище",
+  "phone": "Телефон",
+  "number_placeholder": "Номер",
+  "gender": "Який ваш стать?",
+  "gen": "Виберіть вашу стать:",
+  "male": "Чоловік",
+  "female": "Жінка",
+  "city": "З якого ви міста?",
+  "selecty": "Виберіть ваше місто:",
+  "acc": "У вас вже є обліковий запис?",
+  "voidi": "Увійти!",
 
-
+  "Kiev": "Київ",
+  "Kharkiv": "Харків",
+  "Odessa": "Одеса",
+  "Dnipro": "Дніпро",
+  "Donetsk": "Донецьк",
+  "Lviv": "Львів",
+  "Zaporizhzhia": "Запоріжжя",
+  "Kryvyi Rih": "Кривий Ріг",
+  "Sevastopol": "Севастополь",
+  "Mykolaiv": "Миколаїв",
+  "Mariupol": "Маріуполь",
+  "Luhansk": "Луганськ",
+  "Vinnytsia": "Вінниця",
+  "Makiivka": "Макіївка",
+  "Simferopol": "Сімферополь",
+  "Chernihiv": "Чернігів",
+  "Poltava": "Полтава",
+  "Kherson": "Херсон",
+  "Khmelnytskyi": "Хмельницький",
+  "Cherkasy": "Черкаси",
+  "Chernivtsi": "Чернівці",
+  "Zhytomyr": "Житомир",
+  "Sumy": "Суми",
+  "Rivne": "Рівне",
+  "Horlivka": "Горлівка",
+  "Ivano-Frankivsk": "Івано-Франківськ",
+  "Kamenets-Podilskyi": "Кам'янець-Подільський",
+  "Ternopil": "Тернопіль",
+  "Kropyvnytskyi": "Кропивницький",
+  "Lutsk": "Луцьк",
+  "Kremenchuk": "Кременчук",
+  "Bila Tserkva": "Біла Церква",
+  "Kerch": "Керч",
+  "Melitopol": "Мелітополь",
+  "Kramatorsk": "Краматорськ",
+  "Uzhgorod": "Ужгород",
+  "Brovary": "Бровари",
+  "Yevpatoria": "Євпаторія",
+  "Berdiansk": "Бердянськ",
+  "Alchevsk": "Алчевськ",
+  "Nikopol": "Нікополь",
+  "Slovyansk": "Слов'янськ",
+  "Pavlohrad": "Павлоград",
+  "Perevalsk": "Перевальськ"
 }
