(document.title) update

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -31,7 +31,7 @@
 
 
   "about-b": "About HomeBrilliant:",
-  "aims": "HomeBrilliant aims to provide you with the largest selection of properties marked by refinement, style and personal touch. Thanks to our large catalog of real estate, you will have the opportunity to find the perfect place to live or invest.:",
+  "aims": "HomeBrilliant aims to provide you with the largest selection of properties marked by refinement, style and personal touch. Thanks to our large catalog of real estate, you will have the opportunity to find the perfect place to live or invest.",
   "invest": "To investors",
   "garant": "HomeBrilliant guarantees:",
   "unikal": "Unique opportunities:",
