bug fix and update translation

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -588,6 +588,18 @@
   "Nikopol": "Nikopol",
   "Slovyansk": "Slovyansk",
   "Pavlohrad": "Pavlohrad",
-  "Perevalsk": "Perevalsk"
+  "Perevalsk": "Perevalsk",
+  "159": "To add an advert",
+  "160": "Edit profile",
+  "161": "THIS IS YOUR PERSONAL ACCOUNT",
+  "162": "Biography",
+  "163": "First Name",
+  "164": "Last Name",
+  "165": "City",
+  "166": "Birthday",
+  "167": "Occupation",
+  "168": "Email",
+  "169": "Phone"
+
 
 }
