--- a/src/assets/i18n/ua.json
+++ b/src/assets/i18n/ua.json
@@ -595,5 +595,16 @@
   "Nikopol": "Нікополь",
   "Slovyansk": "Слов'янськ",
   "Pavlohrad": "Павлоград",
-  "Perevalsk": "Перевальськ"
+  "Perevalsk": "Перевальськ",
+  "159": "Ддодати оголошення",
+  "160": "Редагувати профіль",
+  "161": "ЦЕ ВАШ ОСОБИСТИЙ АККАУНТ",
+  "162": "Біографія",
+  "163": "Ім'я",
+  "164": "Прізвище",
+  "165": "Місто",
+  "166": "Дата народження",
+  "167": "Рід занять",
+  "168": "Email",
+  "169": "Телефон"
 }
