--- a/src/assets/i18n/uk.json
+++ b/src/assets/i18n/uk.json
@@ -606,5 +606,9 @@
   "166": "Дата народження",
   "167": "Рід занять",
   "168": "Email",
-  "169": "Телефон"
+  "169": "Телефон",
+  "170": "ДОТРИМАННЯ КОНФІДЕНЦІЙНОСТІ",
+  "171": "Ми поважаємо ваші права як суб'єкта даних. Коли ми отримаємо ваші персональні дані, ми повідомимо вас про методи захисту даних, які ми використовуємо, мету та правові підстави для обробки даних. Ми зберігатимемо ваші персональні дані лише стільки, скільки це необхідно.",
+  "172": "",
+  "173": ""
 }
