--- a/src/assets/i18n/ua.json
+++ b/src/assets/i18n/ua.json
@@ -528,7 +528,7 @@
 
   "158":
   "Антоновича 15А",
-  "loginaut": "Увійдіть до існуючого облікового запису",
+  "loginaut": "Увійдіть",
   "email": "Електронна пошта",
   "email_placeholder": "Введіть Email",
   "password": "Пароль",
